# TFT_eSPI_QRcode

./: CMakeLists.txt
src/: frame.c  qrcode.cpp  qrcode.h
